--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align: center;
+}
+
+#featured-property img{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 900px;
+}
+nav{
+  text-align: center;
+ padding-left: 10px;
+ padding-right: 10px;
+background-color: gray;
+}
+#featured-property figcaption{
+  font-size: small;
+  text-align: center;
+  }
+  
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  #details div{
+    float: left;
+    text-align: center;
+    width: 25%;
+    background-color: red;
+  }
